--- a/liquid-prep-app/package.json
+++ b/liquid-prep-app/package.json
@@ -29,11 +29,11 @@
     "@angular/service-worker": "^10.0.14",
     "ngx-swiper-wrapper": "^10.0.0",
     "ngx-webstorage-service": "^4.1.0",
-    "ng2-search-filter": "0.5.1",
-    "rxjs": "~6.6.2",
+    "ng2-search-filter": "^0.5.1",
+    "rxjs": "^6.6.2",
     "swiper": "^6.2.0",
     "tslib": "^2.0.1",
-    "zone.js": "~0.10.2",
+    "zone.js": "^0.10.2",
     "webusb": "^2.2.0"
   },
   "devDependencies": {
@@ -41,20 +41,20 @@
     "@angular/cli": "^10.1.2",
     "@angular/compiler-cli": "^10.0.14",
     "@angular/language-service": "^10.0.14",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "^3.5.0",
+    "@types/jasminewd2": "^2.0.3",
     "@types/node": "^14.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "jasmine-core": "^3.5.0",
+    "jasmine-spec-reporter": "^5.0.0",
+    "karma": "^5.0.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.2",
+    "karma-jasmine": "^3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.10.2",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.7"
+    "protractor": "^7.0.0",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.0",
+    "typescript": "^3.9.7"
   }
 }
