removed comment in sample config json file
Signed-off-by: Gaurav Ramakrishna <gaurav.ramakrishna@ibm.com>

--- a/liquid-prep-app/src/config-sample.json
+++ b/liquid-prep-app/src/config-sample.json
@@ -1,4 +1,3 @@
 {
-    // Enter the Backend Service Endpoint URL value
-    "backendAPIEndpoint": ""
+    "backendAPIEndpoint": "add the backend URL endpoint here"
 }
