removing duplicate entries
Signed-off-by: Gaurav Ramakrishna <gaurav.ramakrishna@ibm.com>

--- a/liquid-prep-app/angular.json
+++ b/liquid-prep-app/angular.json
@@ -27,8 +27,7 @@
               "src/favicon.ico",
               "src/assets",
               "src/manifest.webmanifest",
-              "src/config.json",
-              "src/manifest.webmanifest"
+              "src/config.json"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
@@ -96,7 +95,6 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/manifest.webmanifest",
               "src/manifest.webmanifest"
             ],
             "styles": [
