--- a/liquid-prep-app/package.json
+++ b/liquid-prep-app/package.json
@@ -21,21 +21,21 @@
     "@angular/common": "^10.0.14",
     "@angular/compiler": "^10.0.14",
     "@angular/core": "^10.0.14",
-    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "^10.0.14",
     "@angular/material": "^10.2.2",
     "@angular/platform-browser": "^10.0.14",
     "@angular/platform-browser-dynamic": "^10.0.14",
     "@angular/router": "^10.0.14",
     "@angular/service-worker": "^10.0.14",
+    "ng2-search-filter": "^0.5.1",
     "ngx-swiper-wrapper": "^10.0.0",
     "ngx-webstorage-service": "^4.1.0",
-    "ng2-search-filter": "^0.5.1",
     "rxjs": "^6.6.2",
     "swiper": "^6.2.0",
     "tslib": "^2.0.1",
-    "zone.js": "^0.10.2",
-    "webusb": "^2.2.0"
+    "webusb": "^2.2.0",
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1100.2",
