--- a/liquid-prep-app/package.json
+++ b/liquid-prep-app/package.json
@@ -17,46 +17,46 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/schematics": "^13.1.4",
-    "@angular/animations": "^10.0.14",
+    "@angular/animations": "^11.2.14",
     "@angular/cdk": "^10.2.2",
-    "@angular/common": "^10.0.14",
-    "@angular/compiler": "^10.0.14",
-    "@angular/core": "^10.0.14",
+    "@angular/common": "^11.2.14",
+    "@angular/compiler": "^11.2.14",
+    "@angular/core": "^11.2.14",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "^10.0.14",
+    "@angular/forms": "^11.2.14",
     "@angular/material": "^10.2.2",
-    "@angular/platform-browser": "^10.0.14",
-    "@angular/platform-browser-dynamic": "^10.0.14",
-    "@angular/router": "^10.0.14",
-    "@angular/service-worker": "^10.0.14",
+    "@angular/platform-browser": "^11.2.14",
+    "@angular/platform-browser-dynamic": "^11.2.14",
+    "@angular/router": "^11.2.14",
+    "@angular/service-worker": "^11.2.14",
     "ng2-search-filter": "^0.5.1",
     "ngx-swiper-wrapper": "^10.0.0",
     "ngx-webstorage-service": "^4.1.0",
     "rxjs": "^6.6.2",
     "swiper": "^6.2.0",
-    "tslib": "^2.0.1",
+    "tslib": "^2.0.0",
     "webusb": "^2.2.0",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1100.2",
-    "@angular/cli": "^10.1.2",
-    "@angular/compiler-cli": "^10.0.14",
-    "@angular/language-service": "^10.0.14",
-    "@types/jasmine": "^3.5.0",
+    "@angular-devkit/build-angular": "^0.1102.18",
+    "@angular/cli": "^11.2.18",
+    "@angular/compiler-cli": "^11.2.14",
+    "@angular/language-service": "^11.2.14",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^14.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "^5.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "karma": "^5.0.0",
-    "karma-chrome-launcher": "^3.1.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.2",
-    "karma-jasmine": "^3.3.0",
+    "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "^7.0.0",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.0",
-    "typescript": "^3.9.7"
+    "typescript": "^4.1.6"
   }
 }
