incremental update ng to v12

--- a/liquid-prep-app/package.json
+++ b/liquid-prep-app/package.json
@@ -8,27 +8,27 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-prod": "ng build --prod",
+    "build-prod": "ng build --configuration production",
     "serve-prod": "npm run build-prod && cd dist/liquid-prep-app && http-server -c-1",
-    "deploy-github": "ng build --prod=true --outputPath=docs --baseHref=/Liquid-Prep/",
+    "deploy-github": "ng build --configuration production=true --outputPath=docs --baseHref=/Liquid-Prep/",
     "postinstall": "ngcc",
     "http-server": "http-server -o"
   },
   "private": true,
   "dependencies": {
     "@angular-devkit/schematics": "^13.1.4",
-    "@angular/animations": "^11.2.14",
+    "@angular/animations": "^12.2.15",
     "@angular/cdk": "^10.2.2",
-    "@angular/common": "^11.2.14",
-    "@angular/compiler": "^11.2.14",
-    "@angular/core": "^11.2.14",
+    "@angular/common": "^12.2.15",
+    "@angular/compiler": "^12.2.15",
+    "@angular/core": "^12.2.15",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "^11.2.14",
+    "@angular/forms": "^12.2.15",
     "@angular/material": "^10.2.2",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "^11.2.14",
-    "@angular/router": "^11.2.14",
-    "@angular/service-worker": "^11.2.14",
+    "@angular/platform-browser": "^12.2.15",
+    "@angular/platform-browser-dynamic": "^12.2.15",
+    "@angular/router": "^12.2.15",
+    "@angular/service-worker": "^12.2.15",
     "ng2-search-filter": "^0.5.1",
     "ngx-swiper-wrapper": "^10.0.0",
     "ngx-webstorage-service": "^4.1.0",
@@ -36,20 +36,20 @@
     "swiper": "^6.2.0",
     "tslib": "^2.0.0",
     "webusb": "^2.2.0",
-    "zone.js": "^0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.18",
-    "@angular/cli": "^11.2.18",
-    "@angular/compiler-cli": "^11.2.14",
-    "@angular/language-service": "^11.2.14",
+    "@angular-devkit/build-angular": "^12.2.15",
+    "@angular/cli": "^12.2.15",
+    "@angular/compiler-cli": "^12.2.15",
+    "@angular/language-service": "^12.2.15",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^14.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^5.0.0",
+    "karma": "^6.3.12",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.2",
     "karma-jasmine": "~4.0.0",
@@ -57,6 +57,6 @@
     "protractor": "^7.0.0",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.0",
-    "typescript": "^4.1.6"
+    "typescript": "^4.3.5"
   }
 }
