--- a/liquid-prep-app/package.json
+++ b/liquid-prep-app/package.json
@@ -8,6 +8,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "deploy": "scripts/deploy.js",
+    "watch": "ng build --watch --configuration development",
+    "watch:deploy": "nodemon -e ts,html,css --watch 'src/**/*.ts' --watch 'src/**/*.html' --watch 'src/**/*.css' --exec 'npm run deploy'",
     "build-prod": "ng build --configuration production",
     "serve-prod": "npm run build-prod && cd dist/liquid-prep-app && http-server -c-1",
     "deploy-github": "ng build --configuration production=true --outputPath=docs --baseHref=/Liquid-Prep/",
@@ -54,6 +57,7 @@
     "karma-coverage-istanbul-reporter": "^3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "nodemon": "^2.0.15",
     "protractor": "^7.0.0",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.0",
