--- a/liquid-prep-app/package.json
+++ b/liquid-prep-app/package.json
@@ -16,15 +16,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "^13.2.0",
+    "@angular-devkit/schematics": "^14.1.2",
     "@angular/animations": "^14.1.2",
-    "@angular/cdk": "^11.2.13",
+    "@angular/cdk": "^14.1.2",
     "@angular/common": "^14.1.2",
     "@angular/compiler": "^14.1.2",
     "@angular/core": "^14.1.2",
-    "@angular/flex-layout": "^11.0.0-beta.33",
+    "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.1.2",
-    "@angular/material": "^10.2.7",
+    "@angular/material": "^14.1.2",
     "@angular/platform-browser": "^14.1.2",
     "@angular/platform-browser-dynamic": "^14.1.2",
     "@angular/router": "^14.1.2",
@@ -39,21 +39,21 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.2.0",
+    "@angular-devkit/build-angular": "^14.1.2",
     "@angular/cli": "^14.1.2",
     "@angular/compiler-cli": "^14.1.2",
     "@angular/language-service": "^14.1.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^14.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^6.3.12",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "^3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "^4.3.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.4.0",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "^7.0.0",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.0",
