add edge computing support

--- a/liquid-prep-app/package.json
+++ b/liquid-prep-app/package.json
@@ -8,6 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "deploy": "scripts/deploy.js",
     "build-prod": "ng build --configuration production",
     "serve-prod": "npm run build-prod && cd dist/liquid-prep-app && http-server -c-1",
     "deploy-github": "ng build --configuration production=true --outputPath=docs --baseHref=/Liquid-Prep/",
