--- a/liquid-prep-express/Dockerfile-arm64
+++ b/liquid-prep-express/Dockerfile-arm64
@@ -1,4 +1,4 @@
-FROM arm64v8/node:16.3.0
+FROM arm64v8/alpine
 
 RUN apt-get update -y && apt-get install -y apt-utils tzdata && apt-get install fswebcam ffmpeg -y && apt-get install mpg123 -y && apt-get install vim -y
 
@@ -8,6 +8,7 @@ COPY . /server
 
 RUN npm install -g npm
 RUN npm install
+RUN npm audit fix
 RUN npm run build
 
 VOLUME /mms_shared_volume
