--- a/liquid-prep-express/mms-docker/package.json
+++ b/liquid-prep-express/mms-docker/package.json
@@ -29,6 +29,7 @@
   "license": "ISC",
   "dependencies": {
     "find-process": "^1.4.4",
-    "is-zip-file": "^1.0.2"
+    "is-zip-file": "^1.0.2",
+    "jsonfile": "^6.1.0"
   }
 }
