--- a/liquid-prep-app/tsconfig.json
+++ b/liquid-prep-app/tsconfig.json
@@ -13,5 +13,16 @@
     {
       "path": "./tsconfig.spec.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "types": [
+      "web-bluetooth",
+      "node_modules/@types",
+      "src/@types"
+    ],
+    "typeRoots": [
+      "node_modules/@types",
+      "src/types"
+    ]
+  }
 }
