--- a/liquid-prep-app/package.json
+++ b/liquid-prep-app/package.json
@@ -35,6 +35,7 @@
     "rxjs": "^6.6.2",
     "swiper": "^6.2.0",
     "tslib": "^2.0.0",
+    "web-bluetooth": "^0.1.2",
     "webusb": "^2.2.0",
     "zone.js": "~0.11.4"
   },
@@ -46,6 +47,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^14.11.1",
+    "@types/web-bluetooth": "^0.0.17",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
