migrate back to 11

--- a/liquid-prep-app/package.json
+++ b/liquid-prep-app/package.json
@@ -16,19 +16,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "^13.2.0",
-    "@angular/animations": "^13.2.0",
-    "@angular/cdk": "^13.3.9",
-    "@angular/common": "^13.2.0",
-    "@angular/compiler": "^13.2.0",
-    "@angular/core": "^13.2.0",
+    "@angular-devkit/schematics": "^11.2.13",
+    "@angular/animations": "111.2.13",
+    "@angular/cdk": "^11.2.13",
+    "@angular/common": "11.2.13",
+    "@angular/compiler": "11.2.13",
+    "@angular/core": "11.2.13",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "^13.2.0",
-    "@angular/material": "^10.2.7",
-    "@angular/platform-browser": "^13.2.0",
-    "@angular/platform-browser-dynamic": "^13.2.0",
-    "@angular/router": "^13.2.0",
-    "@angular/service-worker": "^13.2.0",
+    "@angular/forms": "11.2.13",
+    "@angular/material": "10.2.13",
+    "@angular/platform-browser": "11.2.13",
+    "@angular/platform-browser-dynamic": "11.2.13",
+    "@angular/router": "11.2.13",
+    "@angular/service-worker": "11.2.13",
     "guid-typescript": "^1.0.9",
     "ng2-search-filter": "^0.5.1",
     "ngx-swiper-wrapper": "^10.0.0",
