--- a/liquid-prep-app/package.json
+++ b/liquid-prep-app/package.json
@@ -16,39 +16,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "^11.2.13",
-    "@angular/animations": "11.2.13",
-    "@angular/cdk": "^11.2.13",
-    "@angular/common": "11.2.13",
-    "@angular/compiler": "11.2.13",
-    "@angular/core": "11.2.13",
+    "@angular-devkit/schematics": "^13.2.0",
+    "@angular/animations": "^13.2.0",
+    "@angular/cdk": "^10.2.7",
+    "@angular/common": "^13.2.0",
+    "@angular/compiler": "^13.2.0",
+    "@angular/core": "^13.2.0",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "11.2.13",
-    "@angular/material": "11.2.13",
-    "@angular/platform-browser": "11.2.13",
-    "@angular/platform-browser-dynamic": "11.2.13",
-    "@angular/router": "11.2.13",
-    "@angular/service-worker": "11.2.13",
-    "guid-typescript": "^1.0.9",
+    "@angular/forms": "^13.2.0",
+    "@angular/material": "^10.2.7",
+    "@angular/platform-browser": "^13.2.0",
+    "@angular/platform-browser-dynamic": "^13.2.0",
+    "@angular/router": "^13.2.0",
+    "@angular/service-worker": "^13.2.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-swiper-wrapper": "^10.0.0",
     "ngx-webstorage-service": "^4.1.0",
     "rxjs": "^6.6.2",
     "swiper": "^6.2.0",
     "tslib": "^2.0.0",
-    "web-bluetooth": "^0.1.2",
     "webusb": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^11.2.13",
-    "@angular/cli": "^11.2.13",
-    "@angular/compiler-cli": "^11.2.13",
-    "@angular/language-service": "^11.2.13",
+    "@angular-devkit/build-angular": "^13.2.0",
+    "@angular/cli": "^13.2.0",
+    "@angular/compiler-cli": "^13.2.0",
+    "@angular/language-service": "^13.2.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^14.11.1",
-    "@types/web-bluetooth": "^0.0.17",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
