--- a/liquid-prep-app/package.json
+++ b/liquid-prep-app/package.json
@@ -22,9 +22,9 @@
     "@angular/common": "^14.3.0",
     "@angular/compiler": "^14.3.0",
     "@angular/core": "^14.3.0",
-    "@angular/flex-layout": "14.0.0-beta.41",
+    "@angular/flex-layout": "^14.0.0-beta.41",
     "@angular/forms": "^14.3.0",
-    "@angular/material": "^14.3.0",
+    "@angular/material": "^14.2.0",
     "@angular/platform-browser": "^14.3.0",
     "@angular/platform-browser-dynamic": "^14.3.0",
     "@angular/router": "^14.3.0",
