--- a/liquid-prep-app/package.json
+++ b/liquid-prep-app/package.json
@@ -17,8 +17,9 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/schematics": "^13.2.0",
+    "@angular-eslint/schematics": "^1.0.0",
     "@angular/animations": "^14.3.0",
-    "@angular/cdk": "^13.2.0",
+    "@angular/cdk": "^14.2.7",
     "@angular/common": "^14.3.0",
     "@angular/compiler": "^14.3.0",
     "@angular/core": "^14.3.0",
@@ -33,9 +34,9 @@
     "ng2-search-filter": "^0.5.1",
     "ngx-swiper-wrapper": "^10.0.0",
     "ngx-webstorage-service": "^4.1.0",
-    "rxjs": "^6.6.2",
+    "rxjs": "^7.8.1",
     "swiper": "^6.2.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.1",
     "webusb": "^2.2.0",
     "zone.js": "~0.11.4"
   },
@@ -58,6 +59,6 @@
     "protractor": "^7.0.0",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.0",
-    "typescript": "^4.5.5"
+    "typescript": "4.7"
   }
 }
