--- a/liquid-prep-app/package.json
+++ b/liquid-prep-app/package.json
@@ -22,7 +22,7 @@
     "@angular/common": "^15.2.10",
     "@angular/compiler": "^15.2.10",
     "@angular/core": "^15.2.10",
-    "@angular/flex-layout": "14.0.0-beta.40",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.2.10",
     "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.10",
@@ -37,7 +37,7 @@
     "swiper": "^6.2.0",
     "tslib": "^2.0.0",
     "webusb": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.14.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.11",
