--- a/liquid-prep-app/package.json
+++ b/liquid-prep-app/package.json
@@ -18,20 +18,22 @@
   "dependencies": {
     "@angular-devkit/schematics": "^13.2.0",
     "@angular/animations": "^13.2.0",
-    "@angular/cdk": "^10.2.7",
+    "@angular/cdk": "^13.3.9",
     "@angular/common": "^13.2.0",
     "@angular/compiler": "^13.2.0",
     "@angular/core": "^13.2.0",
-    "@angular/flex-layout": "^11.0.0-beta.33",
+    "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "^13.2.0",
-    "@angular/material": "^10.2.7",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "^13.2.0",
     "@angular/platform-browser-dynamic": "^13.2.0",
     "@angular/router": "^13.2.0",
     "@angular/service-worker": "^13.2.0",
-    "guid-typescript": "^1.0.9",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-swiper-wrapper": "^10.0.0",
     "ngx-webstorage-service": "^4.1.0",
     "rxjs": "^6.6.2",
+    "guid-typescript": "^1.0.9",
     "swiper": "^11.1.4",
     "tslib": "^2.0.0",
     "web-bluetooth": "^0.1.2",
@@ -43,12 +45,12 @@
     "@angular/cli": "^13.2.0",
     "@angular/compiler-cli": "^13.2.0",
     "@angular/language-service": "^13.2.0",
-    "@types/jasmine": "~3.6.0",
+    "@types/jasmine": "~3.8.0",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^14.11.1",
     "@types/web-bluetooth": "^0.0.17",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "^6.3.12",
     "karma-chrome-launcher": "~3.1.0",
