--- a/liquid-prep-app/tsconfig.json
+++ b/liquid-prep-app/tsconfig.json
@@ -15,6 +15,7 @@
     }
   ],
   "compilerOptions": {
+    "esModuleInterop": true,
     "types": [
       "web-bluetooth",
       "node_modules/@types",
