--- a/liquid-prep-app/package.json
+++ b/liquid-prep-app/package.json
@@ -11,44 +11,45 @@
     "build-prod": "ng build --configuration production",
     "serve-prod": "npm run build-prod && cd dist/liquid-prep-app && http-server -c-1",
     "deploy-github": "ng build --configuration production=true --outputPath=docs --baseHref=/Liquid-Prep/",
-    "postinstall": "ngcc",
     "http-server": "http-server -o"
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "^13.2.0",
-    "@angular/animations": "^13.2.0",
-    "@angular/cdk": "^10.2.7",
-    "@angular/common": "^13.2.0",
-    "@angular/compiler": "^13.2.0",
-    "@angular/core": "^13.2.0",
-    "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "^13.2.0",
-    "@angular/material": "^10.2.7",
-    "@angular/platform-browser": "^13.2.0",
-    "@angular/platform-browser-dynamic": "^13.2.0",
-    "@angular/router": "^13.2.0",
-    "@angular/service-worker": "^13.2.0",
-    "guid-typescript": "^1.0.9",
+    "@angular-devkit/schematics": "^18.1.3",
+    "@angular/animations": "^18.1.3",
+    "@angular/cdk": "^18.1.3",
+    "@angular/common": "^18.1.3",
+    "@angular/compiler": "^18.1.3",
+    "@angular/core": "^18.1.3",
+    "@angular/flex-layout": "^15.0.0-beta.42",
+    "@angular/forms": "^18.1.3",
+    "@angular/material": "^18.1.3",
+    "@angular/platform-browser": "^18.1.3",
+    "@angular/platform-browser-dynamic": "^18.1.3",
+    "@angular/router": "^18.1.3",
+    "@angular/service-worker": "^18.1.3",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-swiper-wrapper": "^10.0.0",
     "ngx-webstorage-service": "^4.1.0",
     "rxjs": "^6.6.2",
+    "guid-typescript": "^1.0.9",
     "swiper": "^11.1.4",
     "tslib": "^2.0.0",
     "web-bluetooth": "^0.1.2",
     "webusb": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.14.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.2.0",
-    "@angular/cli": "^13.2.0",
-    "@angular/compiler-cli": "^13.2.0",
-    "@angular/language-service": "^13.2.0",
-    "@types/jasmine": "~3.6.0",
+    "@angular-devkit/build-angular": "^18.1.3",
+    "@angular/cli": "^18.1.3",
+    "@angular/compiler-cli": "^18.1.3",
+    "@angular/language-service": "^18.1.3",
+    "@types/jasmine": "~3.8.0",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^14.11.1",
     "@types/web-bluetooth": "^0.0.17",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "^6.3.12",
     "karma-chrome-launcher": "~3.1.0",
@@ -58,6 +59,6 @@
     "protractor": "^7.0.0",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.0",
-    "typescript": "^4.5.5"
+    "typescript": "^5.4.5"
   }
 }
