--- a/liquid-prep-app/src/assets/json/CropStaticInfoMapping.json
+++ b/liquid-prep-app/src/assets/json/CropStaticInfoMapping.json
@@ -4,36 +4,46 @@
       "cropName": "Wheat",
       "type": "Crop",
       "url": "../assets/crops-images/wheat.png",
+      "thumb": "../assets/crops-images/thumb-wheat.jpg",
       "immaturePic": "../assets/crops-images/wheat-immature-rect.png",
-      "harvestPic": "../assets/crops-images/wheat-harvest-rect.png"
+      "harvestPic": "../assets/crops-images/wheat-harvest-rect.png",
+      "bgPic": "../assets/crops-images/bg-wheat.jpg"
     },
     "60d32094bf1e60cef26ea76e9639917c": {
       "cropName": "Sorghum",
       "type": "Crop",
       "url": "../assets/crops-images/sorghum.png",
+      "thumb": "../assets/crops-images/thumb-sorghum.jpg",
       "immaturePic": "../assets/crops-images/sorghum-immature-rect.png",
-      "harvestPic": "../assets/crops-images/sorghum-harvest-rect.png"
+      "harvestPic": "../assets/crops-images/sorghum-harvest-rect.png",
+      "bgPic": "../assets/crops-images/bg-sorghum.jpg"
     },
     "85162eaa648e9e4ac76f7b9d85f2ebf0": {
       "cropName": "Corn",
       "type": "Crop",
       "url": "../assets/crops-images/corn.png",
+      "thumb": "../assets/crops-images/thumb-corn.jpg",
       "harvestPic": "../assets/crops-images/corn-harvest-rect.png",
-      "immaturePic": "../assets/crops-images/corn-immature-rect.png"
+      "immaturePic": "../assets/crops-images/corn-immature-rect.png",
+      "bgPic": "../assets/crops-images/bg-corn.jpg"
     },
     "85162eaa648e9e4ac76f7b9d85f94000": {
       "cropName": "Cotton",
       "type": "Crop",
       "url": "../assets/crops-images/cotton.png",
+      "thumb": "../assets/crops-images/thumb-cotton.jpg",
       "harvestPic": "../assets/crops-images/cotton-harvest-rect.png",
-      "immaturePic": "../assets/crops-images/cotton-immature-rect.png"
+      "immaturePic": "../assets/crops-images/cotton-immature-rect.png",
+      "bgPic": "../assets/crops-images/bg-cotton.jpg"
     },
     "86b6f2c2b60de9ea9f7b12fde08d8bcc": {
       "cropName": "Soybean",
       "type": "Crop",
       "url": "../assets/crops-images/soybean.png",
+      "thumb": "../assets/crops-images/thumb-soy.jpg",
       "immaturePic": "../assets/crops-images/soybean-immature-rect.png",
-      "harvestPic": "../assets/crops-images/soybean-harvest-rect.png"
+      "harvestPic": "../assets/crops-images/soybean-harvest-rect.png",
+      "bgPic": "../assets/crops-images/bg-soy.jpg"
     }
   }
 }
